Modify color variables and add custom button components.

--- a/pages/index.html
+++ b/pages/index.html
@@ -23,7 +23,7 @@
     </div>
 
     <!-- Modal 按鈕 -->
-    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+    <button type="button" class="btn btn-turquoise c-btn" data-bs-toggle="modal" data-bs-target="#exampleModal">
       打開 modal
     </button>
 
