--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>index</title>
-    <script type="module" crossorigin src="/wavemocards/assets/main-71c30259.js"></script>
-    <link rel="stylesheet" href="/wavemocards/assets/main-accf464b.css">
+    <script type="module" crossorigin src="/wavemocards/assets/main-9e331ac7.js"></script>
+    <link rel="stylesheet" href="/wavemocards/assets/main-265831a0.css">
   </head>
   <body>
     <h1 class="header">我是 header</h1>
@@ -27,7 +27,7 @@
     </div>
 
     <!-- Modal 按鈕 -->
-    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+    <button type="button" class="btn btn-turquoise c-btn" data-bs-toggle="modal" data-bs-target="#exampleModal">
       打開 modal
     </button>
 
