--- a/pages/index.html
+++ b/pages/index.html
@@ -9,7 +9,7 @@
   <body>
     <%- include('./layout/header'); -%>
 
-    <h1 class="index-title">我是首頁</h1>
+    <!-- <h1 class="index-title">我是首頁</h1>
 
     <div class="card" style="width: 18rem">
       <img src="../assets/images/cat.jpg" class="card-img-top" alt="cat" />
@@ -20,15 +20,15 @@
           nobis earum!
         </p>
       </div>
-    </div>
+    </div> -->
 
     <!-- Modal 按鈕 -->
-    <button type="button" class="btn btn-turquoise c-btn" data-bs-toggle="modal" data-bs-target="#exampleModal">
+    <!-- <button type="button" class="btn btn-turquoise c-btn" data-bs-toggle="modal" data-bs-target="#exampleModal">
       打開 modal
-    </button>
+    </button> -->
 
     <!-- Modal 元件 -->
-    <div
+    <!-- <div
       class="modal fade"
       id="exampleModal"
       tabindex="-1"
@@ -48,7 +48,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <%- include('./layout/footer'); -%>
 
