--- a/contact.html
+++ b/contact.html
@@ -5,15 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>contact</title>
-    <script type="module" crossorigin src="/wavemocards/assets/main-41bc8286.js"></script>
-    <link rel="stylesheet" href="/wavemocards/assets/main-998583cb.css">
+    <script type="module" crossorigin src="/wavemocards/assets/main-7102cc43.js"></script>
+    <link rel="stylesheet" href="/wavemocards/assets/main-d440b58f.css">
   </head>
   <body>
-    <h1 class="header">我是 header</h1>
-<a href="index.html">index</a>
-<a href="about.html">about</a>
-<a href="contact.html">contact</a>    <h1>我是contact</h1>
-    <footer class="footer">我是 footer</footer>
+    <header class="header border-bottom border-main">
+    <div class="container py-3 d-flex justify-content-between align-items-center">
+        <h1>
+            <a href="index.html">浪潮情緒卡</a>
+        </h1>
+        <ul class="d-flex justify-content-between align-items-center mb-0 ps-0">
+            <li>
+                <a href="login.html" class="btn btn-main c-btn">登入</a>
+            </li>
+            <li class="ms-3">
+                <a href="signUp.html" class="btn btn-pink c-btn">註冊</a>
+            </li>
+        </ul>
+    </div>
+</header>    <h1>我是contact</h1>
+    <!-- <footer class="footer">我是 footer</footer> -->
     
   </body>
 </html>
