--- a/index.html
+++ b/index.html
@@ -5,18 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>index</title>
-    <script type="module" crossorigin src="/wavemocards/assets/main-41bc8286.js"></script>
-    <link rel="stylesheet" href="/wavemocards/assets/main-998583cb.css">
+    <script type="module" crossorigin src="/wavemocards/assets/main-7102cc43.js"></script>
+    <link rel="stylesheet" href="/wavemocards/assets/main-d440b58f.css">
   </head>
   <body>
-    <h1 class="header">我是 header</h1>
-<a href="index.html">index</a>
-<a href="about.html">about</a>
-<a href="contact.html">contact</a>
-    <h1 class="index-title">我是首頁</h1>
+    <header class="header border-bottom border-main">
+    <div class="container py-3 d-flex justify-content-between align-items-center">
+        <h1>
+            <a href="index.html">浪潮情緒卡</a>
+        </h1>
+        <ul class="d-flex justify-content-between align-items-center mb-0 ps-0">
+            <li>
+                <a href="login.html" class="btn btn-main c-btn">登入</a>
+            </li>
+            <li class="ms-3">
+                <a href="signUp.html" class="btn btn-pink c-btn">註冊</a>
+            </li>
+        </ul>
+    </div>
+</header>
+    <!-- <h1 class="index-title">我是首頁</h1>
 
     <div class="card" style="width: 18rem">
-      <img src="/wavemocards/assets/cat-0c0689ae.jpg" class="card-img-top" alt="cat" />
+      <img src="../assets/images/cat.jpg" class="card-img-top" alt="cat" />
       <div class="card-body">
         <h5 class="card-title">卡片元件</h5>
         <p class="card-text">
@@ -24,15 +35,15 @@
           nobis earum!
         </p>
       </div>
-    </div>
+    </div> -->
 
     <!-- Modal 按鈕 -->
-    <button type="button" class="btn btn-turquoise c-btn" data-bs-toggle="modal" data-bs-target="#exampleModal">
+    <!-- <button type="button" class="btn btn-turquoise c-btn" data-bs-toggle="modal" data-bs-target="#exampleModal">
       打開 modal
-    </button>
+    </button> -->
 
     <!-- Modal 元件 -->
-    <div
+    <!-- <div
       class="modal fade"
       id="exampleModal"
       tabindex="-1"
@@ -52,9 +63,9 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
-    <footer class="footer">我是 footer</footer>
+    <!-- <footer class="footer">我是 footer</footer> -->
     
   </body>
 </html>
