--- a/pages/index.html
+++ b/pages/index.html
@@ -1,54 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-TW">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>index</title>
+    <title>浪潮情緒卡</title>
   </head>
   <body>
     <%- include('./layout/header'); -%>
 
-    <!-- <h1 class="index-title">我是首頁</h1>
-
-    <div class="card" style="width: 18rem">
-      <img src="../assets/images/cat.jpg" class="card-img-top" alt="cat" />
-      <div class="card-body">
-        <h5 class="card-title">卡片元件</h5>
-        <p class="card-text">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, odit, iusto odio assumenda alias id
-          nobis earum!
-        </p>
-      </div>
-    </div> -->
-
-    <!-- Modal 按鈕 -->
-    <!-- <button type="button" class="btn btn-turquoise c-btn" data-bs-toggle="modal" data-bs-target="#exampleModal">
-      打開 modal
-    </button> -->
-
-    <!-- Modal 元件 -->
-    <!-- <div
-      class="modal fade"
-      id="exampleModal"
-      tabindex="-1"
-      aria-labelledby="exampleModalLabel"
-      aria-hidden="true"
-    >
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">Modal 標題</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-          </div>
-          <div class="modal-body">內容</div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">關閉</button>
-            <button type="button" class="btn btn-primary">確定</button>
-          </div>
+    <div class="homepage">
+      <!-- <img src="../assets/images/homepage.svg" alt="homepage background"> -->
+      <div class="container">
+        <h2 class="text-white mb-4">找尋自我</h2>
+        <h2 class="text-white text-end mb-5">情緒的浪潮</h2>
+        <div class="d-flex justify-content-center w-100">
+          <a class="btn btn-pink c-btn c-btn-xl" href="signUp.html">進入情緒浪潮</a>
         </div>
       </div>
-    </div> -->
+    </div>
 
     <%- include('./layout/footer'); -%>
 
