--- a/about.html
+++ b/about.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>about</title>
-    <script type="module" crossorigin src="/wavemocards/assets/main-7102cc43.js"></script>
-    <link rel="stylesheet" href="/wavemocards/assets/main-d440b58f.css">
+    <script type="module" crossorigin src="/wavemocards/assets/main-e42fecef.js"></script>
+    <link rel="stylesheet" href="/wavemocards/assets/main-9c5c7fbc.css">
   </head>
   <body>
-    <header class="header border-bottom border-main">
+    <header class="header mb-1 border-bottom border-main-tint sticky-top">
     <div class="container py-3 d-flex justify-content-between align-items-center">
         <h1>
             <a href="index.html">浪潮情緒卡</a>
