--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>浪潮情緒卡</title>
-    <script type="module" crossorigin src="/wavemocards/assets/main-e42fecef.js"></script>
-    <link rel="stylesheet" href="/wavemocards/assets/main-9c5c7fbc.css">
+    <script type="module" crossorigin src="/wavemocards/assets/main-1800232a.js"></script>
+    <link rel="stylesheet" href="/wavemocards/assets/main-05c69270.css">
   </head>
   <body>
-    <header class="header mb-1 border-bottom border-main-tint sticky-top">
-    <div class="container py-3 d-flex justify-content-between align-items-center">
+    <header class="header sticky-top">
+    <div class="container py-16 d-flex justify-content-between align-items-center">
         <h1>
             <a href="index.html">浪潮情緒卡</a>
         </h1>
@@ -18,7 +18,7 @@
             <li>
                 <a href="login.html" class="btn btn-main c-btn">登入</a>
             </li>
-            <li class="ms-3">
+            <li class="ms-16">
                 <a href="signUp.html" class="btn btn-pink c-btn">註冊</a>
             </li>
         </ul>
@@ -27,15 +27,14 @@
     <div class="homepage">
       <!-- <img src="../assets/images/homepage.svg" alt="homepage background"> -->
       <div class="container">
-        <h2 class="text-white mb-4">找尋自我</h2>
-        <h2 class="text-white text-end mb-5">情緒的浪潮</h2>
+        <h2 class="text-white mb-24">找尋自我</h2>
+        <h2 class="text-white text-end mb-40">情緒的浪潮</h2>
         <div class="d-flex justify-content-center w-100">
           <a class="btn btn-pink c-btn c-btn-xl" href="signUp.html">進入情緒浪潮</a>
         </div>
       </div>
     </div>
 
-    <!-- <footer class="footer">我是 footer</footer> -->
     
   </body>
 </html>
