Create signup.html and it's style

--- a/pages/index.html
+++ b/pages/index.html
@@ -15,7 +15,7 @@
         <h2 class="text-white mb-24">找尋自我</h2>
         <h2 class="text-white text-end mb-40">情緒的浪潮</h2>
         <div class="d-flex justify-content-center w-100">
-          <a class="btn btn-pink c-btn c-btn-xl" href="signUp.html">進入情緒浪潮</a>
+          <a class="btn btn-pink c-btn c-btn-xl" href="signup.html">進入情緒浪潮</a>
         </div>
       </div>
     </div>
