--- a/pages/signup.html
+++ b/pages/signup.html
@@ -4,27 +4,27 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>浪潮情緒卡｜登入</title>
+    <title>浪潮情緒卡｜註冊</title>
     <!-- Bootstrap icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   </head>
   <body>
     <%- include('./layout/header'); -%>
 
-    <div class="login d-flex justify-content-center align-items-stretch">
+    <div class="login signup d-flex justify-content-center align-items-stretch">
         <div class="img w-50">
             <img src="../assets/images/login-bg.svg" alt="login page background">
         </div>
 
         <div class="w-50 py-32 px-24 d-flex flex-column align-items-center">
             <div class="form">
-                <div class="mb-20 text-main d-flex flex-column align-items-center">
+                <div class="mb-20 text-pink d-flex flex-column align-items-center">
                     <i class="bi bi-person-circle profile"></i>
                 </div>
-                <h2 class="mb-32">登入</h2>
+                <h2 class="mb-32">註冊</h2>
                 <!-- 尚未填入 a 連結 -->
-                <a class="w-100 mb-32 py-8 btn btn-outline-main c-btn-outline-main d-flex justify-content-center align-items-center" href="#">
-                    透過 Google 帳號登入
+                <a class="w-100 mb-32 py-8 btn btn-outline-pink c-btn-outline-pink d-flex justify-content-center align-items-center" href="#">
+                    連結 Google 帳號
                     <i class="bi bi-google ms-8"></i>
                 </a>
                 <div class="or mb-32">或</div>
@@ -51,10 +51,42 @@
                             請輸入正確的密碼
                         </div>
                     </div>
-                    <button class="w-100 mb-32 py-8 btn btn-main c-btn" type="submit">登入</button>
+                    <div class="mb-20 row">
+                        <div class="col-6">
+                            <label for="singupLastName" class="form-label  d-flex justify-content-between">
+                                姓
+                                <span class="must">*必填</span>
+                            </label>
+                            <input type="text" class="form-control px-20" id="singupLastName" placeholder="王" required>
+                            <div class="invalid-feedback">
+                                請輸入您的姓氏
+                            </div>
+                        </div>
+                        <div class="col-6">
+                            <label for="singupFirstName" class="form-label  d-flex justify-content-between">
+                                名
+                                <span class="must">*必填</span>
+                            </label>
+                            <input type="text" class="form-control px-20" id="singupFirstName" placeholder="浪潮" required>
+                            <div class="invalid-feedback">
+                                請輸入您的名字
+                            </div>
+                        </div>
+                    </div>
+                    <div class="mb-20">
+                        <label for="singupBirthday" class="form-label d-flex justify-content-between">
+                            生日
+                            <span class="must">*必填</span>
+                        </label>
+                        <input type="date" class="form-control px-20" id="singupBirthday"  required required>
+                        <div class="invalid-feedback">
+                            請輸入您的生日年月日
+                        </div>
+                    </div>
+                    <button class="w-100 mb-32 py-8 btn btn-pink c-btn" type="submit">登入</button>
                 </form>
                 <a class="d-block 
-                click-me" href="signup.html">點我註冊</a>
+                click-me clickMeToLogin" href="signup.html">已經有帳號的嗎？ 點我登入</a>
             </div>
         </div>
     </div>
@@ -81,7 +113,6 @@
             })
         })()
     </script>
-    
     <script type="module" src="../main.js"></script>
   </body>
 </html>
