--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>浪潮情緒卡</title>
-    <script type="module" crossorigin src="/wavemocards/assets/main-1800232a.js"></script>
-    <link rel="stylesheet" href="/wavemocards/assets/main-05c69270.css">
+    <script type="module" crossorigin src="/wavemocards/assets/main-9b62f426.js"></script>
+    <link rel="stylesheet" href="/wavemocards/assets/main-99c84515.css">
   </head>
   <body>
     <header class="header sticky-top">
@@ -19,7 +19,7 @@
                 <a href="login.html" class="btn btn-main c-btn">登入</a>
             </li>
             <li class="ms-16">
-                <a href="signUp.html" class="btn btn-pink c-btn">註冊</a>
+                <a href="signup.html" class="btn btn-pink c-btn">註冊</a>
             </li>
         </ul>
     </div>
@@ -30,7 +30,7 @@
         <h2 class="text-white mb-24">找尋自我</h2>
         <h2 class="text-white text-end mb-40">情緒的浪潮</h2>
         <div class="d-flex justify-content-center w-100">
-          <a class="btn btn-pink c-btn c-btn-xl" href="signUp.html">進入情緒浪潮</a>
+          <a class="btn btn-pink c-btn c-btn-xl" href="signup.html">進入情緒浪潮</a>
         </div>
       </div>
     </div>
