--- a/pages/home.html
+++ b/pages/home.html
@@ -22,6 +22,6 @@
     </div>
 
     <script type="module" src="../main.js"></script>
-    <script></script>
+    <script type="text/javascript" src="../assets/js/mouseoverTitle.js"></script>
   </body>
 </html>
