--- a/pages/index.html
+++ b/pages/index.html
@@ -21,5 +21,6 @@
     </div>
 
     <script type="module" src="../main.js"></script>
+    <script type="text/javascript" src="../assets/js/mouseoverTitle.js"></script>
   </body>
 </html>
