--- a/home.html
+++ b/home.html
@@ -7,14 +7,14 @@
     <title>浪潮情緒卡</title>
     <!-- Bootstrap icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <script type="module" crossorigin src="/wavemocards/assets/main-ea6d26f6.js"></script>
-    <link rel="stylesheet" href="/wavemocards/assets/main-e48c6d86.css">
+    <script type="module" crossorigin src="/wavemocards/assets/main-0d1aeb4d.js"></script>
+    <link rel="stylesheet" href="/wavemocards/assets/main-51563f70.css">
   </head>
   <body>
     <header class="header h-logined sticky-top">
     <div class="container py-16 d-flex justify-content-between align-items-center">
         <h1>
-            <a href="index.html" id="home">浪潮情緒卡</a>
+            <a href="home.html" id="home">浪潮情緒卡</a>
         </h1>
         <ul class="d-flex justify-content-between align-items-center mb-0 ps-0">
             <li>
