--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>浪潮情緒卡</title>
-    <script type="module" crossorigin src="/wavemocards/assets/main-ea6d26f6.js"></script>
-    <link rel="stylesheet" href="/wavemocards/assets/main-e48c6d86.css">
+    <script type="module" crossorigin src="/wavemocards/assets/main-0d1aeb4d.js"></script>
+    <link rel="stylesheet" href="/wavemocards/assets/main-51563f70.css">
   </head>
   <body>
     <header class="header sticky-top">
     <div class="container py-16 d-flex justify-content-between align-items-center">
-        <h1>
+        <h1 id="home">
             <a href="index.html">浪潮情緒卡</a>
         </h1>
         <ul class="d-flex justify-content-between align-items-center mb-0 ps-0">
@@ -36,5 +36,6 @@
     </div>
 
     
+    <script type="text/javascript" src="../assets/js/mouseoverTitle.js"></script>
   </body>
 </html>
