--- a/login.html
+++ b/login.html
@@ -7,13 +7,13 @@
     <title>浪潮情緒卡｜登入</title>
     <!-- Bootstrap icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <script type="module" crossorigin src="/wavemocards/assets/main-ea6d26f6.js"></script>
-    <link rel="stylesheet" href="/wavemocards/assets/main-e48c6d86.css">
+    <script type="module" crossorigin src="/wavemocards/assets/main-0d1aeb4d.js"></script>
+    <link rel="stylesheet" href="/wavemocards/assets/main-51563f70.css">
   </head>
   <body>
     <header class="header sticky-top">
     <div class="container py-16 d-flex justify-content-between align-items-center">
-        <h1>
+        <h1 id="home">
             <a href="index.html">浪潮情緒卡</a>
         </h1>
         <ul class="d-flex justify-content-between align-items-center mb-0 ps-0">
@@ -74,29 +74,8 @@
         </div>
     </div>
 
-    <script>
-        // Example starter JavaScript for disabling form submissions if there are invalid fields
-        (function () {
-        'use strict'
-
-        // Fetch all the forms we want to apply custom Bootstrap validation styles to
-        var forms = document.querySelectorAll('.needs-validation')
-
-        // Loop over them and prevent submission
-        Array.prototype.slice.call(forms)
-            .forEach(function (form) {
-            form.addEventListener('submit', function (event) {
-                if (!form.checkValidity()) {
-                event.preventDefault()
-                event.stopPropagation()
-                }
-
-                form.classList.add('was-validated')
-            }, false)
-            })
-        })()
-    </script>
     
-    
+    <script type="text/javascript" src="../assets/js/mouseoverTitle.js"></script>
+    <script type="text/javascript" src="../assets/js/formValidation.js"></script>
   </body>
 </html>
