--- a/signup.html
+++ b/signup.html
@@ -7,13 +7,13 @@
     <title>浪潮情緒卡｜註冊</title>
     <!-- Bootstrap icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <script type="module" crossorigin src="/wavemocards/assets/main-ea6d26f6.js"></script>
-    <link rel="stylesheet" href="/wavemocards/assets/main-e48c6d86.css">
+    <script type="module" crossorigin src="/wavemocards/assets/main-0d1aeb4d.js"></script>
+    <link rel="stylesheet" href="/wavemocards/assets/main-51563f70.css">
   </head>
   <body>
     <header class="header sticky-top">
     <div class="container py-16 d-flex justify-content-between align-items-center">
-        <h1>
+        <h1 id="home">
             <a href="index.html">浪潮情緒卡</a>
         </h1>
         <ul class="d-flex justify-content-between align-items-center mb-0 ps-0">
@@ -88,14 +88,29 @@
                             </div>
                         </div>
                     </div>
-                    <div class="mb-20">
-                        <label for="singupBirthday" class="form-label d-flex justify-content-between">
-                            生日
-                            <span class="must">*必填</span>
-                        </label>
-                        <input type="date" class="form-control px-20" id="singupBirthday"  required required>
-                        <div class="invalid-feedback">
-                            請輸入您的生日年月日
+                    <div class="mb-20  row">
+                        <div class="col-6">
+                            <label for="singupBirthday" class="form-label d-flex justify-content-between">
+                                生日
+                                <span class="must">*必填</span>
+                            </label>
+                            <input type="date" class="form-control px-20" id="singupBirthday" required>
+                            <div class="invalid-feedback">
+                                請輸入您的生日年月日
+                            </div>
+                        </div>
+                        <div class="col-6">
+                            <label for="singupBirthday" class="form-label d-flex justify-content-between">
+                                身份
+                            </label>
+                            <select class="form-select px-20" aria-label="Default select example">
+                                <!-- <option selected>學生</option> -->
+                                <option value="學生">學生</option>
+                                <option value="教師">教師</option>
+                                <option value="諮商師">諮商師</option>
+                                <option value="醫生">醫生</option>
+                                <option value="其他">其他</option>
+                            </select>
                         </div>
                     </div>
                     <button class="w-100 mb-32 py-8 btn btn-pink c-btn" type="submit">登入</button>
@@ -106,28 +121,8 @@
         </div>
     </div>
 
-    <script>
-        // Example starter JavaScript for disabling form submissions if there are invalid fields
-        (function () {
-        'use strict'
-
-        // Fetch all the forms we want to apply custom Bootstrap validation styles to
-        var forms = document.querySelectorAll('.needs-validation')
-
-        // Loop over them and prevent submission
-        Array.prototype.slice.call(forms)
-            .forEach(function (form) {
-            form.addEventListener('submit', function (event) {
-                if (!form.checkValidity()) {
-                event.preventDefault()
-                event.stopPropagation()
-                }
-
-                form.classList.add('was-validated')
-            }, false)
-            })
-        })()
-    </script>
     
+    <script type="text/javascript" src="../assets/js/mouseoverTitle.js"></script>
+    <script type="text/javascript" src="../assets/js/formValidation.js"></script>
   </body>
 </html>
