--- a/pages/aboutEmotions.html
+++ b/pages/aboutEmotions.html
@@ -69,6 +69,8 @@
         </div>
     </div>
 
+    <%- include('./layout/footer'); -%>
+
     <script type="module" src="../main.js"></script>
     <script type="text/javascript" src="../assets/js/mouseoverTitle.js"></script>
   </body>
