--- a/aboutEmotions.html
+++ b/aboutEmotions.html
@@ -7,8 +7,8 @@
     <title>浪潮情緒卡｜認識情緒</title>
     <!-- Bootstrap icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <script type="module" crossorigin src="/wavemocards/assets/main-5d6a5f23.js"></script>
-    <link rel="stylesheet" href="/wavemocards/assets/main-16c59952.css">
+    <script type="module" crossorigin src="/wavemocards/assets/main-a8b343fe.js"></script>
+    <link rel="stylesheet" href="/wavemocards/assets/main-4c2fd3e7.css">
   </head>
   <body>
     <header class="header h-logined sticky-top">
@@ -102,6 +102,31 @@
         </div>
     </div>
 
+    <footer class="footer py-48">
+    <div class="container d-flex">
+        <div class="logo me-96">
+            <a href="home.html">
+                <img src="/wavemocards/assets/logo_footer-2fe4aa72.svg" alt="logo">
+            </a>
+        </div>
+        <div class="d-flex pt-24">
+            <div class="me-72">
+                <h3>開發群</h3>
+                <ul class="d-flex">
+                    <li class="me-16">Elma Yu</li>
+                    <li class="me-16">Leon Wu</li>
+                    <li>Espoir Fang</li>
+                </ul>
+            </div>
+            <div class="me-72">
+                <a href="mailto:wave_emocards@gmail.cooom">
+                    <h3>聯絡我們</h3>
+                    <span>wave_emocards@gmail.cooom</span>
+                </a>
+            </div>
+        </div>
+    </div>
+</footer>
     
     <script type="text/javascript" src="../assets/js/mouseoverTitle.js"></script>
   </body>
