--- a/findMyEmotions.html
+++ b/findMyEmotions.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>浪潮情緒卡</title>
+    <title>浪潮情緒卡｜找尋我的情緒</title>
     <!-- Bootstrap icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <script type="module" crossorigin src="/wavemocards/assets/main-a8b343fe.js"></script>
@@ -44,15 +44,7 @@
         </ul>
     </div>
 </header>
-    <div class="homepage">
-      <div class="container">
-        <h2 class="text-white mb-24">找尋自我</h2>
-        <h2 class="text-white text-end mb-40">情緒的浪潮</h2>
-        <div class="d-flex justify-content-center w-100">
-          <a class="px-64 btn btn-pink c-btn c-btn-xl" href="aboutEmotions.html">認識情緒</a>
-        </div>
-      </div>
-    </div>
+    
 
     
     <script type="text/javascript" src="../assets/js/mouseoverTitle.js"></script>
