--- a/pages/aboutEmotions.html
+++ b/pages/aboutEmotions.html
@@ -14,8 +14,8 @@
     <div class="aboutEmotions">
         <div class="container py-16">
             <div class="nav-btn py-16 d-flex justify-content-end">
-                <div class="btn-gray-400 ">關於情緒</div>
-                <div class="ms-16 btn btn-outline-main c-btn">情緒卡</div>
+                <div class="btn-disable ">關於情緒</div>
+                <a class="ms-16 btn btn-outline-main c-btn" href="emoCardsClassified.html">情緒卡</a>
             </div>
             <div class="introduction py-16">
                 <div class="mb-56">
