--- a/aboutEmotions.html
+++ b/aboutEmotions.html
@@ -7,8 +7,8 @@
     <title>浪潮情緒卡｜認識情緒</title>
     <!-- Bootstrap icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <script type="module" crossorigin src="/wavemocards/assets/main-a8b343fe.js"></script>
-    <link rel="stylesheet" href="/wavemocards/assets/main-4c2fd3e7.css">
+    <script type="module" crossorigin src="/wavemocards/assets/main-e17f8e2c.js"></script>
+    <link rel="stylesheet" href="/wavemocards/assets/main-1b28fc69.css">
   </head>
   <body>
     <header class="header h-logined sticky-top">
@@ -47,8 +47,8 @@
     <div class="aboutEmotions">
         <div class="container py-16">
             <div class="nav-btn py-16 d-flex justify-content-end">
-                <div class="btn-gray-400 ">關於情緒</div>
-                <div class="ms-16 btn btn-outline-main c-btn">情緒卡</div>
+                <div class="btn-disable ">關於情緒</div>
+                <a class="ms-16 btn btn-outline-main c-btn" href="emoCardsClassified.html">情緒卡</a>
             </div>
             <div class="introduction py-16">
                 <div class="mb-56">
