--- a/pages/emoCardsClassified.html
+++ b/pages/emoCardsClassified.html
@@ -12,7 +12,7 @@
     <%- include('./layout/headerLogined'); -%>
 
     <div class="emoCardsClassified">
-      <div class="container  py-16">
+      <div class="container py-16">
         <div class="nav-btn py-16 d-flex justify-content-end">
           <a class="btn btn-outline-main c-btn" href="aboutEmotions.html">關於情緒</a>
           <div class="ms-16 btn-disable">情緒卡</div>
@@ -37,7 +37,7 @@
 
         <!-- 情緒卡 -->
         <div id="emoCardsTitle" style="height: 56px;"></div>
-        <div class="title d-flex justify-content-between align-items-center">
+        <div class="titleBar d-flex justify-content-between align-items-center">
           <h2>情緒卡</h2>
           <div class="nav-btn d-flex justify-content-end">
             <div class="btn-disable">分類</div>
@@ -46,65 +46,65 @@
         </div>
         <!-- 卡片分類 -->
         <div class="d-flex flex-wrap">
-          <div class="class-card me-16 bg-happy class-card-happy">
+          <a class="class-card me-16 bg-happy link-gray-900 class-card-happy" href="emoCardsHappy.html">
             <p>快&nbsp;樂</p>
             <div class="img-box">
               <img src="../assets/images/happy/happy.svg" alt="happy">
             </div>
-          </div>
-          <div class="class-card me-16 bg-expectation class-card-expectation">
+          </a>
+          <a class="class-card me-16 bg-expectation link-gray-900 class-card-expectation" href="emoCardsExpectation.html">
             <p>期&nbsp;待</p>
             <div class="img-box">
               <img src="../assets/images/expectation/expectation.svg" alt="happy">
             </div>
-          </div>
-          <div class="class-card me-16 bg-relived class-card-relived">
+          </a>
+          <a class="class-card me-16 bg-relived link-gray-900 class-card-relived" href="emoCardsRelived.html">
             <p>安&nbsp;心</p>
             <div class="img-box">
               <img src="../assets/images/relived/relived.svg" alt="happy">
             </div>
-          </div>
-          <div class="class-card me-16 bg-unstable class-card-unstable">
+          </a>
+          <a class="class-card me-16 bg-unstable link-gray-900 class-card-unstable" href="emoCardsUnstable.html">
             <p>不&nbsp;安</p>
             <div class="img-box">
               <img src="../assets/images/unstable/unstable.svg" alt="happy">
             </div>
-          </div>
-          <div class="class-card me-16 bg-amazed class-card-amazed">
+          </a>
+          <a class="class-card me-16 bg-amazed link-gray-900 class-card-amazed" href="emoCardsAmazed.html">
             <p>驚&nbsp;訝</p>
             <div class="img-box">
               <img src="../assets/images/amazed/amazed.svg" alt="happy">
             </div>
-          </div>
-          <div class="class-card me-16 bg-sadness class-card-sadness">
+          </a>
+          <a class="class-card me-16 bg-sadness link-gray-900 class-card-sadness" href="emoCardsSadness.html">
             <p>低&nbsp;落</p>
             <div class="img-box">
               <img src="../assets/images/sadness/sadness.svg" alt="happy">
             </div>
-          </div>
-          <div class="class-card me-16 bg-hate class-card-hate">
+          </a>
+          <a class="class-card me-16 bg-hate link-gray-900 class-card-hate" href="emoCardsHate.html">
             <p>討&nbsp;厭</p>
             <div class="img-box">
               <img src="../assets/images/hate/hate.svg" alt="happy">
             </div>
-          </div>
-          <div class="class-card me-16 bg-anger class-card-anger">
+          </a>
+          <a class="class-card me-16 bg-anger link-gray-900 class-card-anger" href="emoCardsAnger.html">
             <p>生&nbsp;氣</p>
             <div class="img-box">
               <img src="../assets/images/happy/happy.svg" alt="happy">
             </div>
-          </div>
-          <div class="class-card me-16 bg-others class-card-others">
+          </a>
+          <a class="class-card me-16 bg-others link-gray-900 class-card-others" href="emoCardsOthers.html">
             <p>其&nbsp;他</p>
             <div class="img-box">
               <img src="../assets/images/happy/happy.svg" alt="happy">
             </div>
-          </div>
+          </a>
         </div>
 
         <!-- 情緒表 -->
         <div id="emoTableTitle" style="height: 56px;"></div>
-        <div class="title">
+        <div class="titleBar">
           <h2>情緒表</h2>
         </div>
         <!-- 快樂類 -->
