--- a/emoCardsClassified.html
+++ b/emoCardsClassified.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>浪潮情緒卡｜找尋我的情緒</title>
+    <title>浪潮情緒卡｜情緒卡-分類</title>
     <!-- Bootstrap icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <script type="module" crossorigin src="/wavemocards/assets/main-6f49d3c1.js"></script>
-    <link rel="stylesheet" href="/wavemocards/assets/main-826bd704.css">
+    <script type="module" crossorigin src="/wavemocards/assets/main-4801a5a1.js"></script>
+    <link rel="stylesheet" href="/wavemocards/assets/main-fbb3c58e.css">
   </head>
   <body>
     <header class="header h-logined sticky-top">
