--- a/emoCardsExpectation.html
+++ b/emoCardsExpectation.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>浪潮情緒卡｜快樂</title>
+    <title>浪潮情緒卡｜期待</title>
     <!-- Bootstrap icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <script type="module" crossorigin src="/wavemocards/assets/main-4801a5a1.js"></script>
@@ -44,55 +44,37 @@
         </ul>
     </div>
 </header>
-    <div class="classifiedPage">
+    <div class="classifiedPage" style="min-height: 80vh;">
         <div class="container py-16">
             <div class="titleBar d-flex justify-content-between align-items-center">
-                <h2>快樂</h2>
+                <h2>期待</h2>
                 <div class="nav-btn d-flex justify-content-end">
                     <a class="btn btn-outline-main c-btn" href="emoCardsClassified.html">返回</a>
                 </div>
             </div>
             <div class="d-flex flex-wrap mb-72">
-                <button type="button" class="class-card me-16 bg-happy link-gray-900 class-card-happy" data-bs-toggle="modal" data-bs-target="#happy01">
-                    <p>滿&nbsp;足</p>
+                <button type="button" class="class-card me-16 bg-expectation link-gray-900 class-card-expectation" data-bs-toggle="modal" data-bs-target="#expectation01">
+                    <p>期&nbsp;待</p>
                     <div class="img-box">
-                      <img src="/wavemocards/assets/happy-15fff68b.svg" alt="happy">
+                      <img src="/wavemocards/assets/expectation-5303e497.svg" alt="expectation">
                     </div>
                 </button>
-                <button type="button" class="class-card me-16 bg-happy link-gray-900 class-card-happy" data-bs-toggle="modal" data-bs-target="#happy02">
-                    <p>快&nbsp;樂</p>
+                <button type="button" class="class-card me-16 bg-expectation link-gray-900 class-card-expectation" data-bs-toggle="modal" data-bs-target="#expectation02">
+                    <p>有信心</p>
                     <div class="img-box">
-                      <img src="/wavemocards/assets/happy-15fff68b.svg" alt="happy">
+                      <img src="/wavemocards/assets/expectation-5303e497.svg" alt="expectation">
                     </div>
                 </button>
-                <button type="button" class="class-card me-16 bg-happy link-gray-900 class-card-happy" data-bs-toggle="modal" data-bs-target="#happy03">
-                    <p>幸&nbsp;福</p>
+                <button type="button" class="class-card me-16 bg-expectation link-gray-900 class-card-expectation" data-bs-toggle="modal" data-bs-target="#expectation03">
+                    <p>充滿興趣</p>
                     <div class="img-box">
-                      <img src="/wavemocards/assets/happy-15fff68b.svg" alt="happy">
+                      <img src="/wavemocards/assets/expectation-5303e497.svg" alt="expectation">
                     </div>
                 </button>
-                <button type="button" class="class-card me-16 bg-happy link-gray-900 class-card-happy" data-bs-toggle="modal" data-bs-target="#happy04">
-                    <p>自&nbsp;豪</p>
+                <button type="button" class="class-card me-16 bg-expectation link-gray-900 class-card-expectation" data-bs-toggle="modal" data-bs-target="#expectation04">
+                    <p>渴望</p>
                     <div class="img-box">
-                      <img src="/wavemocards/assets/happy-15fff68b.svg" alt="happy">
-                    </div>
-                </button>
-                <button type="button" class="class-card me-16 bg-happy link-gray-900 class-card-happy" data-bs-toggle="modal" data-bs-target="#happy05">
-                    <p>興&nbsp;奮</p>
-                    <div class="img-box">
-                      <img src="/wavemocards/assets/happy-15fff68b.svg" alt="happy">
-                    </div>
-                </button>
-                <button type="button" class="class-card me-16 bg-happy link-gray-900 class-card-happy" data-bs-toggle="modal" data-bs-target="#happy06">
-                    <p>痛&nbsp;快</p>
-                    <div class="img-box">
-                      <img src="/wavemocards/assets/happy-15fff68b.svg" alt="happy">
-                    </div>
-                </button>
-                <button type="button" class="class-card me-16 bg-happy link-gray-900 class-card-happy" data-bs-toggle="modal" data-bs-target="#happy07">
-                    <p>狂&nbsp;喜</p>
-                    <div class="img-box">
-                      <img src="/wavemocards/assets/happy-15fff68b.svg" alt="happy">
+                      <img src="/wavemocards/assets/expectation-5303e497.svg" alt="expectation">
                     </div>
                 </button>
             </div>
