--- a/pages/emoCardsHappy.html
+++ b/pages/emoCardsHappy.html
@@ -11,7 +11,7 @@
   <body>
     <%- include('./layout/headerLogined'); -%>
 
-    <div class="classifiedPage">
+    <div class="classifiedPage" style="min-height: 80vh;">
         <div class="container py-16">
             <div class="titleBar d-flex justify-content-between align-items-center">
                 <h2>快樂</h2>
