--- a/emoCardsExpectation.html
+++ b/emoCardsExpectation.html
@@ -59,8 +59,8 @@
                       <img src="/wavemocards/assets/expectation-5303e497.svg" alt="expectation">
                     </div>
                 </button>
-                <button type="button" class="class-card me-16 bg-expectation link-gray-900 class-card-expectation" data-bs-toggle="modal" data-bs-target="#expectation02">
-                    <p>有信心</p>
+                <button type="button" class="class-card me-16 bg-expectation link-gray-900 class-card-expectation " data-bs-toggle="modal" data-bs-target="#expectation02">
+                    <p class="px-0">有信心</p>
                     <div class="img-box">
                       <img src="/wavemocards/assets/expectation-5303e497.svg" alt="expectation">
                     </div>
@@ -762,7 +762,7 @@
     </div>
 </div>
 <!-- 恐懼 -->
-<div class="modal fade px-32" id="unstable06" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade px-32" id="unstable08" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered c-modal-xl-card">
         <div class="modal-content bg-unstable">
             <div class="modal-body d-flex justify-content-between align-items-center">
