--- a/emoCardsHappy.html
+++ b/emoCardsHappy.html
@@ -44,7 +44,7 @@
         </ul>
     </div>
 </header>
-    <div class="classifiedPage">
+    <div class="classifiedPage" style="min-height: 80vh;">
         <div class="container py-16">
             <div class="titleBar d-flex justify-content-between align-items-center">
                 <h2>快樂</h2>
@@ -780,7 +780,7 @@
     </div>
 </div>
 <!-- 恐懼 -->
-<div class="modal fade px-32" id="unstable06" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade px-32" id="unstable08" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered c-modal-xl-card">
         <div class="modal-content bg-unstable">
             <div class="modal-body d-flex justify-content-between align-items-center">
